@@ -1,5 +1,9 @@
 2010-08-20  David Reveman  <davidr@novell.com>
 
+	* uielement.cpp (ComputeTransform): Inherit affine transformation
+	values from absolute_projection instead of absolute_xform for
+	popup children.
+
 	* dirty.h:
 	* dirty.cpp:
 	* uielement.h:
